--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,7 @@ facebook_username:
 linkedin_username: 
 google_plus_username: 
 email_username: facidsi2016.1@gmail.com
-disqus_shortname: facidsi2016.1
+disqus_shortname: facidsiatividades
 
 curriculo_doc: 
 
